# OCR_huggingface

./: README.md  extension_change.py  main.py  pyproject.toml  test_nanosets.py  train_nanosets.py
results_txt/: 1_result.txt  2_result.txt  3_result.txt  4_result.txt
